added tech skills subheadings

--- a/test/src/App.css
+++ b/test/src/App.css
@@ -17,6 +17,14 @@ body {
   text-decoration: none;
 }
 
+.tech-skills {
+  color: whitesmoke;
+}
+
+.typesOf-skills {
+
+}
+
 #title {
   color: whitesmoke;
   margin-top: 5%;
