added tech skills subheadings

--- a/test/src/App.css
+++ b/test/src/App.css
@@ -20,10 +20,14 @@ body {
 .tech-skills {
   color: whitesmoke;
 }
+/* 
+  left off here, need to work on the commenting on both App.js and
+  on here lol
+*/
 
-.typesOf-skills {
+/* .typesOf-skills {
 
-}
+} */
 
 #title {
   color: whitesmoke;
