restart the css in order to use tailwind T-T

--- a/test/src/App.css
+++ b/test/src/App.css
@@ -1,4 +1,4 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
@@ -48,4 +48,4 @@ body {
 #unordered-list2 {
   margin-right: 5.3%;
   list-style-position: inside;
-}
+} */
