--- a/test/src/index.css
+++ b/test/src/index.css
@@ -7,4 +7,8 @@
     body {
         background-color: lightgoldenrodyellow;
     }
+    @font-face {
+        font-family: 'League Spartan Nav Bar';
+        src: url('./fonts/LeagueSpartan-Bold.ttf');
+    }
 }
